# fastapi-groceries-plugin

./: README.md  setup.cfg
src/: main.py  models.py
