[metadata]
name = fastapi-groceries-plugin
version = attr: fastapi-groceries-plugin.VERSION
author = Ramy Rashad
author_email = ra.rashad@gmail.com
description = A simple FastAPI template for a web-based grocery list app
long_description = file: README.md
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.11
install_requires =
    fastapi
    redis
    types-redis
    uvicorn

[options.package_data]
* = *.txt, *.rst, *.md

[options.extras_require]
test = 
    pytest
    pytest-cov
    flake8
    black
    pre-commit

[options.packages.find]
exclude =
    fastapi-groceries-list.images*
    fastapi-groceries-list.objects*
    fastapi-groceries-list.tests*
